Changement de police pour #441

--- a/templates/tutorial/base.html
+++ b/templates/tutorial/base.html
@@ -29,7 +29,7 @@
 
 {% block sidebar %}
     <aside class="sidebar sommaire mobile-menu-hide">
-        {% block sidebar_new_tutorial %}{% endblock %}
+        {% block sidebar_new %}{% endblock %}
 
         {% captureas sidebaractions %}
             {% block sidebar_actions %}{% endblock %}
