--- a/templates/tutorial/base_online.html
+++ b/templates/tutorial/base_online.html
@@ -15,7 +15,7 @@
 
 
 
-{% block sidebar_new_tutorial %}
+{% block sidebar_new %}
     <div>
         <a href="{% url "zds.tutorial.views.add_tutorial" %}" class="new-btn ico-after more blue">
             Nouveau tutoriel
