--- a/assets/css/scss/_all-supports.scss
+++ b/assets/css/scss/_all-supports.scss
@@ -1301,6 +1301,17 @@
         }
     }
 
+    .article-content {
+        p,
+        ul {
+            // TODO : Améliorer ça...
+            font-family: "Liberation Serif", "Times New Roman", Times, Georgia, FreeSerif, serif;
+            font-size: 18px;
+            font-size: 1.8rem;
+            font-size: 2.2ex;
+        }
+    }
+
     .article-content,
     .message-content {
         margin-top: 20px;
@@ -1320,17 +1331,24 @@
             }
         }
         h2 {
-            font-size: 20px;
-            font-size: 2.0rem;
+            font-size: 22px;
+            font-size: 2.2rem;
+            line-height: 50px;
             margin-bottom: 20px;
             background:  #FFF;
             border-top: 1px solid #e0e4e5;
             padding-left: 1%;
+            font-weight: 400;
         }
         h3 {
+            font-size: 20px;
+            font-size: 2.0rem;
+            margin-bottom: 14px;
+        }
+        h4 {
             font-size: 18px;
             font-size: 1.8rem;
-            margin-bottom: 14px;
+            margin-bottom: 12px;
         }
 
         .information,
