--- a/templates/tutorial/validation/index.html
+++ b/templates/tutorial/validation/index.html
@@ -21,7 +21,7 @@
 
 
 
-{% block sidebar_new_tutorial %}{% endblock %}
+{% block sidebar_new %}{% endblock %}
 {% block sidebar_blocks %}
     <h3>Filtres</h3>
     <ul>
