--- a/templates/pages/assoc_subscribe.html
+++ b/templates/pages/assoc_subscribe.html
@@ -2,15 +2,15 @@
 {% load crispy_forms_tags %}
 
 {% block title %}
-    S'inscrire à l'association Zeste de Savoir
+    Adhérer à l'association Zeste de Savoir
 {% endblock %}
 
 {% block head-title %}
-    S'inscrire à l'association Zeste de Savoir
+    Adhérer à l'association Zeste de Savoir
 {% endblock %}
 
 {% block breadcrumb %}
-  <li class="current">S'inscrire à l'association Zeste de Savoir</li>
+  <li class="current">Adhérer à l'association Zeste de Savoir</li>
 {% endblock %}
 
 {% block content %}
